[GTK][EFL] Disk cache is never dumped to disk in WebKit2 https://bugs.webkit.org/show_bug.cgi?id=97583

Reviewed by Martin Robinson.

The problem is that WebProcess::platformTerminate(), where the
cache is currently dumped, is not called when the web process
finishes because the UI process closes the connection. The cache
is created and loaded in the main() so it can also be flushed and
dumped there, so that we also make sure it's always called when
the process finishes normally when the main loop quits.

* WebProcess/efl/WebProcessMainEfl.cpp:
(WebKit::WebProcessMainEfl): Flush and dump the disk cache when
the main loop returns.
* WebProcess/gtk/WebProcessMainGtk.cpp:
(WebKit::WebProcessMainGtk): Ditto.
* WebProcess/soup/WebProcessSoup.cpp:
(WebKit::WebProcess::platformTerminate): Do not flush and dump
the disk cache.

Canonical link: https://commits.webkit.org/115559@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129541 268f45cc-cd09-0410-ab3c-d52691b4dbfc